--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,9 @@ h1, h2, h3, h4, h5, h6 {
    font-size: 0px;
    
 	}
+	#header .logo img {
+  max-height: 30px;
+}
 }
 
 /*--------------------------------------------------------------
